@@ -135,7 +135,9 @@
 			<SELECT size="1" name="ticket[owner]" {tip text="Select user" trigger="owner"}>
 				<OPTION value="0">- {trans("select user")} -</OPTION>
 				{foreach $userlist as $user}
+				{if ConfigHelper::checkConfig('phpui.helpdesk_hide_disabled_users') && $user.access}
 				<OPTION value="{$user.id}"{if !$user.access} class="blend"{/if}{if $user.id == $user.owner} selected{/if}>{$user.rname}</OPTION>
+				{/if}
 				{/foreach}
 			</SELECT>
 		</TD>
@@ -149,7 +151,9 @@
 			<SELECT size="1" name="ticket[verifierid]" {tip text="Select user" trigger="verifierid"}>
 				<OPTION value="0">- {trans("select user")} -</OPTION>
 				{foreach $userlist as $user}
+				{if ConfigHelper::checkConfig('phpui.helpdesk_hide_disabled_users') && $user.access}
 				<OPTION value="{$user.id}"{if !$user.access} class="blend"{/if}{if $user.id == $ticket.verifierid} selected{/if}>{$user.rname}</OPTION>
+				{/if}
 				{/foreach}
 			</SELECT>
 		</TD>
