@@ -95,7 +95,9 @@
 										<OPTION value="0" SELECTED>- {trans("select user")} -</OPTION>
 										{/if}
 										{foreach $userlist as $user}
-										<OPTION value="{$user.id}"{if !$user.access} class="blend"{/if}{if $user.id == $ticket.owner} selected{/if}>{$user.name}</OPTION>
+										{if ConfigHelper::checkConfig('phpui.helpdesk_hide_disabled_users') && $user.access}
+										<OPTION value="{$user.id}"{if !$user.access} class="blend"{/if}{if $user.id == $ticket.owner} selected{/if}>{$user.rname}</OPTION>
+										{/if}
 										{/foreach}
 									</SELECT>
 								</TD>
@@ -109,7 +111,9 @@
 									<SELECT size="1" name="ticket[verifierid]" {tip text="Select user" trigger="verifierid"}>
 										<OPTION value="0">- {trans("select user")} -</OPTION>
 										{foreach $userlist as $user}
-										<OPTION value="{$user.id}"{if !$user.access} class="blend"{/if}{if $user.id == $ticket.verifierid} selected{/if}>{$user.name}</OPTION>
+										{if ConfigHelper::checkConfig('phpui.helpdesk_hide_disabled_users') && $user.access}
+										<OPTION value="{$user.id}"{if !$user.access} class="blend"{/if}{if $user.id == $ticket.verifierid} selected{/if}>{$user.rname}</OPTION>
+										{/if}
 										{/foreach}
 									</SELECT>
 								</TD>
