@@ -42,6 +42,8 @@ version ?.??.?? (????-??-??):
   - improvement: allow to define ticket verifier [interduo]
   - improvement: allow to define ticket deadline [interduo]
   - enhancement: introduced quick search for netnode and netdev [interduo]
+  - improvement: phpui.helpdesk_hide_disabled_user configuration variable controls if
+    disabled users are shown in user lists used in helpdesk forms [chilan]
 
 version 1.11.23 (2018-03-21):
 
